codex-rs/tui/src/bottom_pane/snapshots/nori_tui__bottom_pane__list_selection_view__tests__list_selection_very_narrow_config.snap
---
source: tui/src/bottom_pane/list_selection_view.rs
expression: "render_lines_with_width(&view, 30)"
---
                              
  Configuration               
                              
› 1. Vertical Footer (on) (…  
    Stack footer segments     
    vertically instead of     
    horizontally              
  2. OS Notifications (off)   
    Send native desktop       
    notifications on events
